# wolfssl

./: .codespellexcludelines  .codespellrc  .cproject  .cyignore  .editorconfig  .gitignore  .project  .wolfssl_known_macro_extras  5pcjmi1khpissle4nsvfansphppbgjh5  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ChangeLog.md  INSTALL  LICENSING  LPCExpresso.cproject  Makefile.am  NEWS.md  README  README-async.md  README.md  README_cmake.md  SCRIPTS-LIST  SECURITY-POLICY.md  SECURITY-REPORT-TEMPLATE.md  Vagrantfile  async-check.sh  autogen.sh  build_notes.txt  client-test.sh  client.help  codesonar.conf  commit-tests.sh  configure.ac  configure.in  cyassl-ntru.sln  cyassl-ntru.vcproj  cyassl.sln  cyassl.vcproj  (+37 more)
.github/renode-test/stm32h753/: CMakeLists.txt  entrypoint.sh  main.c  run-renode.resc  startup_stm32h753.c  stm32h753.ld  stm32h7xx_hal_conf.h  toolchain-arm-none-eabi.cmake  user_settings.h
IDE/Espressif/ESP-IDF/examples/template/components/wolfssl/: CMakeLists.txt  Kconfig  README.md  component.mk
IDE/Espressif/ESP-IDF/examples/template/components/wolfssl/include/: user_settings.h
IDE/Espressif/ESP-IDF/examples/wolfssl_client/main/: CMakeLists.txt  Kconfig.projbuild  client-tls.c  component.mk  main.c  time_helper.c  wifi_connect.c
IDE/Espressif/ESP-IDF/examples/wolfssl_client/main/include/: client-tls.h  main.h  time_helper.h  wifi_connect.h
IDE/Espressif/ESP-IDF/examples/wolfssl_server/: CMakeLists.txt  Makefile  README.md  VisualGDB_wolfssl_server.vgdbproj  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp8266  wolfssl_server_ESP8266.vgdbproj
IDE/Espressif/ESP-IDF/examples/wolfssl_server/VisualGDB/: VisualGDB_wolfssl_server.sln  VisualGDB_wolfssl_server.vgdbproj  wolfssl_server_IDF_v5_ESP32.sln  wolfssl_server_IDF_v5_ESP32.vgdbproj
IDE/Espressif/ESP-IDF/examples/wolfssl_server/components/wolfssl/: CMakeLists.txt  Kconfig  component.mk
IDE/Espressif/ESP-IDF/examples/wolfssl_server/components/wolfssl/include/: user_settings.h
IDE/Espressif/ESP-IDF/examples/wolfssl_server/main/: CMakeLists.txt  Kconfig.projbuild  main.c  server-tls.c  time_helper.c  wifi_connect.c
IDE/Espressif/ESP-IDF/examples/wolfssl_server/main/include/: main.h  server-tls.h  time_helper.h  wifi_connect.h
IDE/Espressif/ESP-IDF/examples/wolfssl_test/: CMakeLists.txt  Makefile  README.md  VisualGDB_wolfssl_test.sln  VisualGDB_wolfssl_test.vgdbproj  VisualGDB_wolfssl_test_IDF_v5_ESP32S3.vgdbproj  partitions_singleapp_large.csv  sdkconfig.defaults  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32s3  testAll.sh  testMonitor.sh  wolfssl_test_ESP8266.sln  wolfssl_test_ESP8266.vgdbproj
IDE/Espressif/ESP-IDF/examples/wolfssl_test/VisualGDB/: README.md  VisualGDB_wolfssl_test-WIP.sln  VisualGDB_wolfssl_test-WIP.vgdbproj  VisualGDB_wolfssl_test.sln  VisualGDB_wolfssl_test.vgdbproj  VisualGDB_wolfssl_test_IDF_v5_ESP32S3.sln  VisualGDB_wolfssl_test_IDF_v5_ESP32S3.vgdbproj  wolfssl_test-IDF_v4_ESP32.sln  wolfssl_test-IDF_v4_ESP32.vgdbproj  wolfssl_test-IDF_v5_ESP32.sln  wolfssl_test-IDF_v5_ESP32.vgdbproj  wolfssl_test-IDF_v5_ESP32C3.sln  wolfssl_test-IDF_v5_ESP32C3.vgdbproj  wolfssl_test-IDF_v5_ESP32C6.sln  wolfssl_test-IDF_v5_ESP32C6.vgdbproj  wolfssl_test-IDF_v5_ESP32H2.sln  wolfssl_test-IDF_v5_ESP32H2.vgdbproj  wolfssl_test_IDF_v5_ESP32S2.sln  wolfssl_test_IDF_v5_ESP32S2.vgdbproj  wolfssl_test_IDF_v5_ESP32S3.sln  wolfssl_test_IDF_v5_ESP32S3.vgdbproj
IDE/Espressif/ESP-IDF/examples/wolfssl_test/components/wolfssl/: CMakeLists.txt  README.md  component.mk
IDE/Espressif/ESP-IDF/examples/wolfssl_test/components/wolfssl/include/: user_settings.h
IDE/Espressif/ESP-IDF/examples/wolfssl_test/main/: CMakeLists.txt  component.mk  entry.c  main.c  time_helper.c  time_helper.h
IDE/Espressif/ESP-IDF/examples/wolfssl_test/main/include/: main.h  time_helper.h  user_settings.h
IDE/zephyr/lib/: CMakeLists.txt  Kconfig  Kconfig.tls-generic  install_lib.sh  user_settings.h  zephyr_init.c
IDE/zephyr/lib/settings/: user_settings-tls-generic.h
IDE/zephyr/module/: CMakeLists.txt  install_module.sh  zephyr_init.c
testsuite/: Makefile.am  include.am  testsuite-ntru.vcproj  testsuite.c  testsuite.sln  testsuite.vcproj  testsuite.vcxproj  testsuite.vcxproj.props  testsuite_2012.vcxproj  utils.c  utils.h
wrapper/rust/wolfssl/: Cargo.toml  Makefile  build.rs
wrapper/rust/wolfssl-wolfcrypt/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  headers.h
wrapper/rust/wolfssl-wolfcrypt/src/: aes.rs  blake2.rs  blake2_digest.rs  blake2_mac.rs  chacha20_poly1305.rs  cmac.rs  cmac_mac.rs  curve25519.rs  dh.rs  dilithium.rs  ecc.rs  ecdsa.rs  ed25519.rs  ed448.rs  fips.rs  hkdf.rs  hmac.rs  hmac_mac.rs  kdf.rs  lib.rs  lms.rs  mldsa.rs  mlkem.rs  mlkem_kem.rs  pbkdf2_password_hash.rs  prf.rs  random.rs  rsa.rs  rsa_oaep.rs  rsa_pkcs1v15.rs  scrypt_password_hash.rs  sha.rs  sha_digest.rs  sm2.rs  sys.rs
wrapper/rust/wolfssl-wolfcrypt/tests/: test_aes.rs  test_blake2.rs  test_blake2_digest.rs  test_blake2_mac.rs  test_chacha20_poly1305.rs  test_cmac.rs  test_cmac_mac.rs  test_curve25519.rs  test_dh.rs  test_dilithium.rs  test_ecc.rs  test_ecdsa.rs  test_ed25519.rs  test_ed448.rs  test_hkdf.rs  test_hmac.rs  test_hmac_mac.rs  test_kdf.rs  test_lms.rs  test_mldsa.rs  test_mlkem.rs  test_mlkem_kem.rs  test_pbkdf2_password_hash.rs  test_prf.rs  test_random.rs  test_rsa.rs  test_rsa_oaep.rs  test_rsa_pkcs1v15.rs  test_scrypt_password_hash.rs  test_sha.rs  test_sha_digest.rs  test_sm2.rs  test_wolfcrypt.rs
wrapper/rust/wolfssl-wolfcrypt/tests/common/: mod.rs
wrapper/rust/wolfssl/src/: lib.rs  wolfcrypt.rs
wrapper/rust/wolfssl/src/wolfcrypt/: aes.rs  cmac.rs  dh.rs  ecc.rs  ed25519.rs  ed448.rs  hkdf.rs  hmac.rs  kdf.rs  prf.rs  random.rs  rsa.rs  sha.rs
wrapper/rust/wolfssl/tests/: test_aes.rs  test_cmac.rs  test_dh.rs  test_ecc.rs  test_ed25519.rs  test_ed448.rs  test_hkdf.rs  test_hmac.rs  test_kdf.rs  test_prf.rs  test_random.rs  test_rsa.rs  test_sha.rs  test_wolfcrypt.rs
zephyr/samples/wolfssl_benchmark/: CMakeLists.txt  prj.conf  sample.yaml
(+4933 files in other folders)
